--- a/scss/_biglie.scss
+++ b/scss/_biglie.scss
@@ -2,112 +2,6 @@
 MARBLES
 *********************/
 
-//.marbles {
-//    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-//    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-//    display: -ms-flexbox;      /* TWEENER - IE 10 */
-//    display: -webkit-flex;     /* NEW - Chrome */
-//    display: flex;
-//
-//    -webkit-justify-content: center;
-//    -moz-justify-content: center;
-//    -ms-justify-content: center;
-//    justify-content: center;
-//
-//    width: 100%;
-//    margin: 0 -1rem;
-//    padding: 4rem 0;
-//}
-//
-//.marble {
-//    display: inline-block;
-//    margin: 1rem;
-//    border-radius: 100%;
-//}
-//
-//.larger-size .marble,
-//.large-size .marble,
-//.medium-size .marble,
-//.small-size .marble {
-//    width: 100%;
-//}
-//
-//.marble-image {
-//    background: #444;
-//    border-radius: 100%;
-//    position: relative;
-//    width: inherit;
-//
-//    &:before { /* a little hack to keep the ratio */
-//        content: "";
-//        display: block;
-//        padding-top: 100%; 	/* change here the ratio 1:1 = 100% */
-//    }
-//
-//    img {
-//        width: 100%;
-//        height: 100%;
-//        border-radius: 100%;
-//        /* following lines are needed for the ratio thing */
-//        position:  absolute;
-//        top: 0; left: 0; bottom: 0; right: 0;
-//    }
-//}
-//
-//h2.marble-title {
-//
-//    font: {
-//        size: rem-calc(25);
-//        weight: 300;
-//    }
-//
-//    text-align: center;
-//    word-wrap: break-word;
-//    margin: 1rem 0;
-//    padding: 0 5%;
-//
-//}
-//
-//h3.marble-subtitle {
-//
-//    color: $body-font-color;
-//
-//    font: {
-//        size: rem-calc(12);
-//    }
-//    text-transform: uppercase;
-//
-//    text-align: center;
-//    word-wrap: break-word;
-//    margin: -1.3rem 0;
-//    padding: 0 5%;
-//}
-//
-//.marble { /* managing the hover effect */
-//
-//    .marble-image {
-//        opacity: .75;
-//
-//        @include transition(all .4s ease-in-out);
-//    }
-//
-//    a {
-//        color: lighten($body-font-color, 10%);
-//    }
-//
-//    &:hover {
-//
-//        .marble-image {
-//            opacity: 1;
-//        }
-//
-//        a {
-//            color: $body-font-color;
-//        }
-//
-//    }
-//}
-
 .biglie {
 
     margin: 0;
@@ -121,6 +15,7 @@ MARBLES
     width: 90%;
     max-width: rem-calc(350);
     margin: 5%;
+    vertical-align: top;
 
     .biglia-image {
 
